--- a/tests/screwthread-uniformity/makefile
+++ b/tests/screwthread-uniformity/makefile
@@ -1,3 +1,7 @@
-BOARD_TAG = uno
+BOARD_TAG = leonardo
+ARDUINO_DIR = /home/mattvenn/arduino-1.6.5-r5
+AVRDUDE =/home/mattvenn/arduino-1.6.5-r5/hardware/tools/avr/bin/avrdude 
+AVRDUDE_CONF = /home/mattvenn/arduino-1.6.5-r5/hardware/tools/avr/etc/avrdude.conf
 include $(ARDMK_DIR)/Arduino.mk
+
 
