--- a/tests/screwthread-uniformity/makefile
+++ b/tests/screwthread-uniformity/makefile
@@ -1,4 +1,5 @@
 BOARD_TAG = leonardo
+ARDUINO_PORT = /dev/ttyACM0
 ARDUINO_DIR = /home/mattvenn/arduino-1.6.5-r5
 AVRDUDE =/home/mattvenn/arduino-1.6.5-r5/hardware/tools/avr/bin/avrdude 
 AVRDUDE_CONF = /home/mattvenn/arduino-1.6.5-r5/hardware/tools/avr/etc/avrdude.conf
